--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -28,6 +28,7 @@
 @media screen and (max-width: 990px) {
   .navbar-collapse-link {
     margin-top: 20px;
+    font-size: large;
   }
   
 }
